# movei_apie

./: .env  Cargo.toml  README.md
migrations/2023-07-02-190411_videos/: up.sql
src/: args.rs  db.rs  main.rs  models.rs  schema.rs
src/ops/: mod.rs  video_ops.rs
