[package]
name = "movies_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.26"
clap = { version ="4.3.10", features = ["derive"]}